Correct search path for QT_TR_NOOP and Q_DECLARE_TR_NOOP signature

Task-number: QTBUG-91521
Change-Id: I6ffe277081bc0a8596f3ce0a6d9a048b0a0ca587
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit a13711dfccd32e8387decc921de9126178a32cf3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>